# in3

./: .bumpversion.cfg  .clang-format  .classpath  .codeclimate.yml  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  arm-toolchain.cmake  build.gradle  build.sh  build_debug.sh  build_gcc.sh  build_release.sh  build_wasm.sh  build_win.sh  build_zephyr.sh  build_zephyr_docker.sh  code-quality.gitlab-ci.yml  compiler.cmake  conanfile.txt  debugDeposit.txt  flash_zephyr.sh  in3.json  in3.srctrlbm  in3.srctrlprj  in3_example.c  index.html  parity.json  run_java.sh  sonar-project.properties  test.json  zephyr.dockerfile
c/: CMakeLists.txt  ci-analyse.yml  ci-deploy.yml  ci.yml  compiler.cmake  macro.cmake  options.cmake
c/docs/: 0_home.md  1_install.md  2_examples.md  3_rpc.md  3_using.md  4_ledger_nano.md  4_plugins.md  5_ledger_nano.md  CMakeLists.txt  Doxyfile.in  build_examples.md_
c/examples/: README.md  btc_transaction.c  build.sh  call_a_function.c  get_balance.c  get_block.c  get_logs.c  get_transaction.c  get_transaction_receipt.c  ipfs_put_get.c  ledger_sign.c  main  send_transaction.c  usn_device.c  usn_rent.c
c/include/: in3.h  in3.rs.h  in3.swift.h
c/include/in3/: api_utils.h  btc.h  btc_api.h  btc_target.h  btc_types.h  bytes.h  chainspec.h  client.h  colors.h  context.h  core_api.h  crypto.h  cryptocell_signer.h  data.h  device_apdu_commands.h  error.h  eth_api.h  eth_basic.h  eth_full.h  eth_nano.h  ethereum_apdu_client.h  iamo_signer.h  iamo_zk.h  in3_curl.h  in3_http.h  in3_init.h  in3_winhttp.h  ipfs.h  ipfs_api.h  ledger_signer.h  log.h  mem.h  nodelist.h  nodeselect_def.h  params.h  pay_eth.h  pay_incentive.h  plugin.h  request.h  request_internal.h  (+10 more)
c/prebuild/: macro2bin.sh  prebuild.h
c/signer/ledger-nano/: README.md
c/src/api/: CMakeLists.txt  api_utils.h
c/src/cmd/: CMakeLists.txt
c/src/core/: CMakeLists.txt
c/src/init/: CMakeLists.txt  in3_init.c  in3_init.h
c/src/nodeselect/: CMakeLists.txt  cache.c  cache.h  nodelist.c  nodelist.h  nodeselect_def.c  nodeselect_def.h  nodeselect_def_cfg.h  registry.c  registry.h
c/src/pay/: CMakeLists.txt
c/src/plugins/: CMakeLists.txt  client_data.c  client_data.h
c/src/sentry/: CMakeLists.txt  sentry.c  sentry.h
c/src/signer/: CMakeLists.txt
c/src/tools/: CMakeLists.txt
c/src/transport/: CMakeLists.txt
c/src/utils/: CMakeLists.txt  recorder.c  recorder.h
c/src/verifier/: CMakeLists.txt  in3_init.c  in3_init.h  verifier_init.c  verifier_init.h
c/test/: CMakeLists.txt  runner.c  test_evm.c  test_libcurl.c  test_rlp.c  test_trie.c  test_utils.h  vm_runner.c  vm_runner.h
c/test/cmake/: code-coverage.cmake
c/test/qemu/: CMakeLists.txt  README.rst
c/test/testdata/: validatorlist_kovan.json
java/docs/: 1_install.md  2_examples.md  CMakeLists.txt  Doxyfile.in  build_examples.md_
java/src/: CMakeLists.txt  README.md  in3_jni.c  in3_jni.h
python/docs/: 2_examples.md  CMakeLists.txt  Doxyfile.in  build_examples.md  build_examples.md_  compiled_examples.md  documentation.md  pydocmd.yml  readme.md
rust/in3-rs/: Cargo.toml  README.md
rust/in3-sys/: .gitignore  Cargo.toml  README.md  build.rs  common.rs
src/bindings/: CMakeLists.txt  in3.c  in3.h
src/cmd/: CMakeLists.txt  data.c  example.c  main.c  rlp.c  usn_device.c
src/core/: CMakeLists.txt  compiler.cmake  include.cmake
src/eth_basic/: CMakeLists.txt  eth_account.c  eth_basic.c  eth_basic.h  eth_getBlock.c  eth_getLog.c  eth_getTransaction.c  filter.c  filter.h  include.cmake  signer.c  signer.h  trie.c  trie.h
src/eth_full/: CMakeLists.txt  big.c  big.h  call.c  code.c  env.c  eth_full.c  eth_full.h  evm.c  evm.h  gas.h  include.cmake  mem.c  mem.h  mini-gmp.c  mini-gmp.h  opcodes.c  precompiled.c
src/eth_nano/: CMakeLists.txt  blockheader.c  eth_nano.c  eth_nano.h  include.cmake  merkle.c  merkle.h  registry.c  rlp.c  rlp.h  serialize.c  serialize.h  signature.c  txreceipt.c  vhist.c  vhist.h
src/examples/: CMakeLists.txt  README.md  example.c  in3_example.c  usn_device.c
src/libin3/: CMakeLists.txt  in3.c  in3.h  in3_IN3.c  in3_IN3.h
src/test/: CMakeLists.txt  main.c
src/transport/: CMakeLists.txt
src/transport_curl/: CMakeLists.txt  in3_comm_serial.c  in3_comm_serial.h  in3_curl.c  in3_curl.h  in3_storage.c  in3_storage.h
src/usn_api/: CMakeLists.txt  include.cmake  usn_api.c  usn_api.h
src/usn_device/: CMakeLists.txt
src/verifier/: CMakeLists.txt
src/wasm/: CMakeLists.txt  wasm.c
src/zephyr/: CMakeLists.txt  _prj.conf  _prj_base.conf  cmake.sh  flash.sh  nrf52840_pca10059.overlay  prj.conf
src/zephyr-motor-boot/: CMakeLists.txt  compile.sh  include_eth_core.cmake  include_eth_nano.cmake
src/zephyr-smartmeter/: CMakeLists.txt  include_eth_api.cmake  include_eth_basic.cmake  include_eth_core.cmake  nrf52840_pca10059.overlay  prj.conf
test/: CMakeLists.txt  core.c  runner.c  test_bitset.c  test_cache.c  test_core.c  test_evm.c  test_ipfs.c  test_key_hash.c  test_libcurl.c  test_rlp.c  test_sign.c  test_trie.c  test_utils.h  test_verify_eth_getLog.c  test_vhist.c  tobalaba_nodelist.json  vm_runner.c  vm_runner.h
test/cmake/: code-coverage.cmake  config.h.in
test/qemu/: CMakeLists.txt  prj.conf
test/testdata/: eth_call.json  eth_getBalance.json  eth_getBlockByHash.json  eth_getBlockByNumber.json  eth_getCode.json  eth_getTransactionByHash.json  eth_getTransactionReceipt.json  receipt.json  test.json  validatorlist_tobalaba.json
test/unit_tests/: mock.h  test_abi.c  test_binary_encoding.c  test_bitset.c  test_btc_api.c  test_bulk.c  test_cache.c  test_core.c  test_ethapi.c  test_filter.c  test_key_hash.c  test_logging.c  test_nodelist.c  test_recorder.c  test_request.c  test_rpc_api.c  test_sign.c  test_verify_eth_getLog.c
test/unity/: unity.c  unity.h
test/util/: genjson.php  platform.h  stack_diag.c  stack_diag.h  transport.c  transport.h
wasm/src/: CMakeLists.txt  build_js.sh  doc.json  in3.d.ts  in3.js  in3_btc_api.js  in3_eth_api.js  in3_ipfs_api.js  in3_util.js  index.d.ts  package.json  wasm.c
(+1828 files in other folders)
